Fixed bug overflow in debugger on mobile.

--- a/css/debug.css
+++ b/css/debug.css
@@ -6,7 +6,7 @@
     max-height: unset;
     max-width: unset;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     border: none;
     border-radius: 0px;
     position: absolute;
@@ -70,6 +70,7 @@
 
 .debug-title-btn {
     width: 100%;
+    height: 30px;
     margin: 0px;
     border-radius: 0px;
     background-color: var(--ui-title-color);
@@ -77,7 +78,7 @@
 }
 
 .debug-title-btn-active {
-    color: white;
+    color: blue;
 }
 
 .debug-text {
